DOCSP-32545 Fix Jammy Install Instructions (#4451)
* (DOCPS-32545): Add signed-by to 6.0 Ubuntu install instructions

* (DOCSP-32545): Add signed-by for Jammy install

* add version replacements

* update enterprise instructions

* remove period from step title

* remove link to dearmor flag docs

--- a/source/includes/steps-install-mongodb-on-ubuntu.yaml
+++ b/source/includes/steps-install-mongodb-on-ubuntu.yaml
@@ -25,7 +25,7 @@ content: |
 
         .. code-block:: bash
 
-           echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu jammy/mongodb-org/{+version+} multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-{+version+}.list
+           echo "deb [ arch=amd64,arm64 signed-by=/usr/share/keyrings/mongodb-server-{+version+}.gpg ] https://repo.mongodb.org/apt/ubuntu jammy/mongodb-org/{+version+} multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-{+version+}.list
 
      .. tab:: Ubuntu 20.04 (Focal)
         :tabid: focal
@@ -35,7 +35,7 @@ content: |
 
         .. code-block:: bash
 
-           echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu focal/mongodb-org/{+version+} multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-{+version+}.list
+           echo "deb [ arch=amd64,arm64 signed-by=/usr/share/keyrings/mongodb-server-{+version+}.gpg ] https://repo.mongodb.org/apt/ubuntu focal/mongodb-org/{+version+} multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-{+version+}.list
 
 ---
 title: Reload local package database
