--- a/source/includes/steps-install-mongodb-enterprise-on-ubuntu.yaml
+++ b/source/includes/steps-install-mongodb-enterprise-on-ubuntu.yaml
@@ -5,26 +5,28 @@ source:
   file: steps-install-mongodb-on-ubuntu.yaml
   ref: import-key
 ---
-title: Create a ``/etc/apt/sources.list.d/mongodb-enterprise.list`` file for MongoDB.
+title: Create a list file for MongoDB
 stepnum: 2
 level: 4
 ref: sources-list
 content: |
 
-  Click the appropriate tab for your version of Ubuntu.
+  Create the list file
+  ``/etc/apt/sources.list.d/mongodb-enterprise-{+version+}.list`` for your
+  version of Ubuntu.
 
   .. tabs::
 
      .. tab:: Ubuntu 22.04
         :tabid: jammy
-          
-        The following instruction is for **Ubuntu 22.04 (Jammy)**.
 
-        Create the list file for **Ubuntu 22.04 (Jammy)**:
+        Create the
+        ``/etc/apt/sources.list.d/mongodb-enterprise-{+version+}.list``
+        file for **Ubuntu 22.04 (Jammy)**:
 
         .. code-block:: bash
 
-           echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.com/apt/ubuntu jammy/mongodb-enterprise/{+version+} multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-enterprise-{+version+}.list
+           echo "deb [ arch=amd64,arm64 signed-by=/usr/share/keyrings/mongodb-server-{+version+}.gpg ] https://repo.mongodb.com/apt/ubuntu jammy/mongodb-enterprise/{+version+} multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-enterprise-{+version+}.list
 
      .. tab:: Ubuntu 20.04
         :tabid: focal
@@ -36,8 +38,7 @@ content: |
 
         .. code-block:: bash
 
-           echo "deb [ arch=amd64,arm64 ] http://repo.mongodb.com/apt/ubuntu focal/mongodb-enterprise/{+version+} multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-enterprise.list
-
+           echo "deb [ arch=amd64,arm64 signed-by=/usr/share/keyrings/mongodb-server-{+version+}.gpg ] http://repo.mongodb.com/apt/ubuntu focal/mongodb-enterprise/{+version+} multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-enterprise-{+version+}.list
 ---
 stepnum: 3
 level: 4
@@ -45,7 +46,7 @@ source:
   file: steps-install-mongodb-on-ubuntu.yaml
   ref: reload
 ---
-title: Install the MongoDB Enterprise packages.
+title: Install the MongoDB Enterprise packages
 stepnum: 4
 level: 4
 ref: install
