Revert "DOCSP-32687 change encrypted fields map to encryption schema (#4450)" (#4475)
This reverts commit be63788c3183ce8e1b0e38fe02608b18c130da48.

--- a/snooty.toml
+++ b/snooty.toml
@@ -1,6 +1,8 @@
 name = "docs"
 title = "MongoDB Manual"
+
 sharedinclude_root = "https://raw.githubusercontent.com/10gen/docs-shared/main/"
+
 intersphinx = [
     "https://pymongo.readthedocs.io/en/stable/objects.inv",
     "https://motor.readthedocs.io/en/stable/objects.inv",
@@ -11,6 +13,7 @@ intersphinx = [
     "https://www.mongodb.com/docs/mongodb-shell/objects.inv",
     "https://www.mongodb.com/docs/cluster-to-cluster-sync/current/objects.inv",
 ]
+
 # toc_landing_pages are pages that have pages nested beneath them
 # and **should** open when a user clicks on that page in the TOC
 # (i.e. they're not drawers)
@@ -227,6 +230,7 @@ toc_landing_pages = [
    "/tutorial/remove-documents",
    "/tutorial/update-documents",
 ]
+
 [substitutions]
 bi = "MongoDB Connector for BI"
 compass = "MongoDB Compass"
@@ -240,6 +244,8 @@ sbe-title = "Slot-Based Query Execution Engine"
 version = "{+version+}"
 version-last = "{+version-last+}"
 year = "2022"
+
+
 [constants]
 package-branch = "testing" # testing for dev rc releases
 windows-dir-version = "6.0" # wizard
@@ -268,13 +274,15 @@ sbe-title = "Slot-Based Query Execution Engine"
 sbe-short-title = "Slot-Based Execution Engine"
 fcv = ":abbr:`fCV (feature compatibility version)`"
 fts = "Atlas Search"
-# Automerger Constants
+
+# Automerger Constants ------------------------------------------------
 auto-merge-upper = "AutoMerger"
 auto-merge-lower = "automerger"
 auto-merge-lower-plural = "automerger"
 auto-merge-action = "automerging"
 auto-merge-action-upper = "Automerging"
-# In Use Encryption Constants
+
+# In Use Encryption (QE CSFLE) Constants ------------------------------
 csfle = "Client-Side Field Level Encryption"
 csfle-abbrev = "CSFLE"
 qe = "Queryable Encryption"
@@ -282,20 +290,31 @@ qe-abbr = ":abbr:`QE (Queryable Encryption)`"
 qe-preview = "{+qe+} Public Preview"
 qe-equality-ga = "{+qe+} with equality queries"
 qe-equality-ga-title = "{+qe+} With Equality Queries"
+
+# QE CSFLE concepts
+enc-fields-map = "encrypted fields map"
+enc-fields-map-title = "Encrypted Fields Map"
 in-use-doc = "document with encrypted fields"
-in-use-doc-title = "Document with Encrypted Fields"
 in-use-docs = "documents with encrypted fields"
-kms-long = "Key Management System"
-kms-abbr = ":abbr:`KMS ({+kms-long+})`"
-km-service-long = "Key Management Service"
+in-use-doc-title = "Document with Encrypted Fields"
+manual-enc = "explicit encryption"
+manual-enc-title = "Explicit Encryption"
+manual-enc-first = "Explicit encryption"
+shared-library = "Automatic Encryption Shared Library"
+
+# QE CSFLE key management
 cmk-long = "Customer Master Key"
 cmk-abbr = ":abbr:`CMK ({+cmk-long+})`"
+cmk-abbr-no-hover = "CMK"
 dek-long = "Data Encryption Key"
 dek-abbr = ":abbr:`DEK ({+dek-long+})`"
 dek-abbr-no-hover = "DEK"
-cmk-abbr-no-hover = "CMK"
 key-vault-long = "Key Vault collection"
 key-vault-long-title = "Key Vault Collection"
+kms-long = "Key Management System"
+kms-abbr = ":abbr:`KMS ({+kms-long+})`"
+
+# QE CSFLE Key Providers
 aws-abbr = ":abbr:`AWS (Amazon Web Services)`"
 aws-iam-abbr = ":abbr:`IAM (Identity and Access Management)`"
 aws-arn-abbr = ":abbr:`ARN (Amazon Resource Name)`"
@@ -304,31 +323,28 @@ azure-kv = "Azure Key Vault"
 gcp-abbr = ":abbr:`GCP (Google Cloud Platform)`"
 gcp-kms = "Google Cloud Key Management Service"
 gcp-kms-abbr = "Google Cloud KMS"
-manual-enc = "explicit encryption"
-manual-enc-title = "Explicit Encryption"
-manual-enc-first = "Explicit encryption"
 kmip-hover = ":abbr:`KMIP (Key Management Interoperability Protocol)`"
 kmip-kms-no-hover = "KMIP-compliant key provider"
 kmip-kms = "{+kmip-hover+}-compliant key provider"
 kmip-kms-title = "KMIP-Compliant Key Provider"
+
+# QE CSFLE versions and links
 csfle-code-snippets-gen-keys = "https://github.com/mongodb/docs/tree/master/source/includes/quick-start/generate-master-key"
 libmongocrypt-version = "1.8"
 mongodb-crypt-version = "1.7.3"
 sample-app-url-csfle = "https://github.com/mongodb-university/docs-in-use-encryption-examples/tree/main/csfle"
 sample-app-url-qe = "https://github.com/mongodb/docs/tree/master/source/includes/qe-tutorials"
 sample-app-url-qe-old = "https://github.com/mongodb-university/docs-in-use-encryption-examples/tree/main/queryable-encryption"
-enc-schema = "encryption schema"
-enc-schema-title = "Encryption Schema"
-efm = "``encryptedFieldsMap``"
-efm-title = "encryptedFieldsMap"
-shared-library = "Automatic Encryption Shared Library"
 shared-library-version = "7.0.0"
 shared-library-version-drop-down = "{+shared-library-version+} (current)"
 shared-library-package = "``crypt_shared``"
 shared-library-download-link = ""
+efm = "``encryptedFieldsMap``"
+efm-title = "encryptedFieldsMap"
 auto-encrypt-options = "autoEncryptionOpts"
 title-auto-encrypt-options = "AutoEncryptionOpts"
-# Driver Constants
+
+# QE CSFLE Drivers
 java-driver-full = "MongoDB Java driver"
 node-driver-full = "MongoDB Node.js driver"
 go-driver-full = "MongoDB Go driver"
@@ -342,16 +358,20 @@ csharp-api-docs = "https://mongodb.github.io/mongo-csharp-driver/2.18/apidocs/ht
 java-api-docs = "https://mongodb.github.io/mongo-java-driver/4.7/apidocs"
 go-api-docs = "https://pkg.go.dev/go.mongodb.org/mongo-driver@v1.10.3"
 enterprise-download-link = "https://www.mongodb.com/try/download/enterprise"
-# C2C Product
+
+# C2C Product ---------------------------------------------------------
 c2c-full-product-name = "MongoDB Cluster-to-Cluster Sync"
 c2c-product-name = "Cluster-to-Cluster Sync"
 c2c-docs = "https://www.mongodb.com/docs/cluster-to-cluster-sync/current"
+
+
 [[banners]]
 targets = [
     "core/queryable-encryption.txt",
     "core/queryable-encryption/*.txt",
     "core/queryable-encryption/*/*.txt",
 ]
+
 variant = "warning"
 value = """
     {+qe-equality-ga+} is generally available (GA) in MongoDB 7.0 and \
@@ -359,41 +379,51 @@ value = """
     Data encrypted using the Public Preview is incompatible with the feature release. \
     For more information, see :ref:`7.0-compatibility`.
     """
+
 [[banners]]
 targets = ["core/csfle.txt", "core/csfle/*.txt", "core/csfle/*/*.txt"]
+
 variant = "tip"
 value = """
     MongoDB's {+qe+} feature is available (GA) in MongoDB 7.0 and later. \
     To learn more about {+qe+} and compare its benefits with {+csfle+}, \
     see :ref:`qe-manual-feature-qe`.
     """
+
 [[banners]]
 targets = [
     "core/security-oidc.txt",
     "tutorial/configure-oidc.txt"
 ]
+
 variant = "danger"
 value = """
     OpenID Connect is currently available in Public Preview.
     """
+
 [bundle]
 manpages = "manpages.tar.gz"
+
 [manpages.mongokerberos]
 file = "reference/program/mongokerberos.txt"
 title = "mongokerberos"
 section = 1
+
 [manpages.mongos]
 file = "reference/program/mongos.txt"
 title = "mongos"
 section = 1
+
 [manpages.mongod]
 file = "reference/program/mongod.txt"
 title = "mongod"
 section = 1
+
 [manpages.mongoldap]
 file = "reference/program/mongoldap.txt"
 title = "mongoldap"
 section = 1
+
 [manpages.mongodb-parameters]
 file = "reference/parameters.txt"
 title = "MongoDB setParameter Options"
