(DOCSP-32862): Add signed-by to Debian install instructions (#4486)

--- a/source/includes/steps-install-mongodb-enterprise-on-debian.yaml
+++ b/source/includes/steps-install-mongodb-enterprise-on-debian.yaml
@@ -20,7 +20,7 @@ content: |
 
         .. code-block:: bash
 
-           echo "deb http://repo.mongodb.com/apt/debian bullseye/mongodb-enterprise/{+version+} main" | sudo tee /etc/apt/sources.list.d/mongodb-enterprise.list
+           echo "deb [ signed-by=/usr/share/keyrings/mongodb-server-{+version+}.gpg ] http://repo.mongodb.com/apt/debian bullseye/mongodb-enterprise/{+version+} main" | sudo tee /etc/apt/sources.list.d/mongodb-enterprise.list
 
   If you'd like to install MongoDB Enterprise packages from a
   particular :ref:`release series <release-version-numbers>`, you can
@@ -32,20 +32,13 @@ content: |
   .. tabs::
      :hidden:
 
-     .. tab:: Debian 12 "Bookworm"
-        :tabid: debian-11-bullseye
-
-        .. code-block:: bash
-
-           echo "deb http://repo.mongodb.com/apt/debian bookworm/mongodb-enterprise/{+version-last+} main" | sudo tee /etc/apt/sources.list.d/mongodb-enterprise-{+version-last+}.list
-
     
      .. tab:: Debian 11 "Bullseye"
         :tabid: debian-11-bullseye
 
         .. code-block:: bash
 
-           echo "deb http://repo.mongodb.com/apt/debian bullseye/mongodb-enterprise/{+version-last+} main" | sudo tee /etc/apt/sources.list.d/mongodb-enterprise-{+version-last+}.list
+           echo "deb [ signed-by=/usr/share/keyrings/mongodb-server-{+version+}.gpg ] http://repo.mongodb.com/apt/debian bullseye/mongodb-enterprise/{+version-last+} main" | sudo tee /etc/apt/sources.list.d/mongodb-enterprise-{+version-last+}.list
 
 ---
 stepnum: 3
