--- a/source/includes/steps-install-mongodb-on-debian.yaml
+++ b/source/includes/steps-install-mongodb-on-debian.yaml
@@ -20,7 +20,7 @@ content: |
 
         .. code-block:: bash
 
-           echo "deb http://repo.mongodb.org/apt/debian bullseye/mongodb-org/{+version+} main" | sudo tee /etc/apt/sources.list.d/mongodb-org-{+version+}.list
+           echo "deb [ signed-by=/usr/share/keyrings/mongodb-server-{+version+}.gpg ] http://repo.mongodb.org/apt/debian bullseye/mongodb-org/{+version+} main" | sudo tee /etc/apt/sources.list.d/mongodb-org-{+version+}.list
 
 ---
 stepnum: 3
