--- a/snooty.toml
+++ b/snooty.toml
@@ -268,6 +268,7 @@ sbe-title = "Slot-Based Query Execution Engine"
 sbe-short-title = "Slot-Based Execution Engine"
 fcv = ":abbr:`fCV (feature compatibility version)`"
 fts = "Atlas Search"
+atlas = "MongoDB Atlas"
 # Automerger Constants
 auto-merge-upper = "AutoMerger"
 auto-merge-lower = "automerger"
