--- a/snooty.toml
+++ b/snooty.toml
@@ -252,6 +252,7 @@ latest-lts-version = "7.0"
 last-supported-version = "5.0"
 release = "6.3"
 version-dev = "7.1"
+version-last = "6.0"
 pgp-version = "{+version+}"
 rsa-key = "4B7C549A058F8B6B"
 pgp-fingerprint = "E162F504A20CDF15827F718D4B7C549A058F8B6B"
