DOCSP-26175 auditConfig Cluster Parameters  (#4790)
* DOCSP-32722 Cluster Parameter Reference Page (#4471) (#4682)

* DOCSP-32722 Cluster Parameter Reference Page

* wording

* *

* typo

* JA feedback

* adjust wording under Syntax section

* nit edits

* DOCSP-32723 changeStreamOptions Reference Page (#4592) (#4710)

* DOCSP-32723 changeStreamOptions Reference Page

* text styling

* indentations

* move text to include

* JD feedback

* DOCSP-32724 auditConfig Cluster Parameter (#4691)

* DOCSP-32724 auditConfig Cluster Parameter

* build errors

* add to release notes

* build errors

* JD feedback [still in progress]

* deprecation warnings

* compatibility changes

* external review feedback

* typo

--- a/snooty.toml
+++ b/snooty.toml
@@ -120,6 +120,7 @@ toc_landing_pages = [
    "/reference/aggregation",
    "/reference/bson-types",
    "/reference/change-events",
+   "/reference/cluster-parameters",
    "/reference/collation",
    "/reference/command",
    "/reference/command/nav-administration",
