(DOCSP-26200): queryStats aggregation stage (#4524)
* (DOCSP-26200): queryStats aggregation stage

* WIP

* WIP

* WIP

* Remove accidental file

* add TODO

* add missing ref

* formatting

* WIP

* WIP

* WIP

* wording

* WIP

* edits

* add examples

* try to fix table format

* add transformed example

* remove TODO

* more table formatting

* add atlas data collection

* table formatting

* clarity

* add more context for data collection

* table formatting

* wording tweaks

* address review comments

* formatting

* use simplified examples

* add input/output

* edits

* add link to transformed example

* spacing

* edits

* address review comments

* fix incomplete sentence

* rework transformation section

* edits

* fix collation link formatting

* change wording for output fields

* edit glossary

* more edits

* remove glossary entry

* formatting

* edits

* Address review feedback

* wording

* review edit

* wording

* WIP review edits

* remove Atlas data collection info

* (DOCSP-33347): Re-add Atlas data collection info

* typo

* minimalism

* typo

* clarity

* remove Atlas data collection info

* edits

* (DOCSP-33347): Re-add Atlas data collection info

* add find queryShape properties

* change case

* formatting

* abstracted > normalized consistency

* clarify privilege

* address review comments

* review edits

--- a/source/includes/extracts-agg-stages.yaml
+++ b/source/includes/extracts-agg-stages.yaml
@@ -161,6 +161,12 @@ content: |
           
           See also :pipeline:`$unset` for removing existing fields.
 
+      * - :pipeline:`$queryStats`
+
+        - .. include:: /includes/aggregation/queryStats/description.rst
+
+          .. include:: /includes/aggregation/queryStats/unsupported-warning.rst
+
       * - :pipeline:`$redact`
 
         - Reshapes each document in the stream by restricting the
