DOCSP-33319 7.0.2 Release Notes (#4826)

--- a/config/changelog_conf.yaml
+++ b/config/changelog_conf.yaml
@@ -54,6 +54,8 @@ groups:
     - Packaging
     - Mobile
     - Change streams
+    - Build-compile
+    - Evergreen
   "Internals":
     - Testing
     - Python tests
