Revises per copy review.

--- a/source/includes/steps-add-scram-user.yaml
+++ b/source/includes/steps-add-scram-user.yaml
@@ -78,7 +78,7 @@ content: |
   By default, users can access all the clusters and 
   :atlas:`federated database instances </data-federation/overview>` in the 
   project. You can restrict access to specific clusters and federated database instances
-  by doing the following: 
+  by performing both of the following steps: 
 
   a. Toggle :guilabel:`Restrict Access to Specific Clusters/Federated 
      Database Instances` to :guilabel:`ON`.
