(DOCSP-32350): Revamped Users and Roles tutorial. (#4874)
* (DOCSP-32350): Revamped Users and Roles tutorial.

* (DOCSP-32350): Incorporated Sarah's feedback.

* (DOCSP-32350): Incorporated Jack's feedback.

* (DOCSP-32350): Incorporated Jack's feedback.

--- a/snooty.toml
+++ b/snooty.toml
@@ -241,7 +241,13 @@ sbe-title = "Slot-Based Query Execution Engine"
 version = "{+version+}"
 version-last = "{+version-last+}"
 year = "2022"
+ui-org-menu = ":icon-mms:`office` :guilabel:`Organizations` menu"
+
 [constants]
+atlas-admin-api = "Atlas Administration API"
+atlas-cli = "Atlas CLI"
+atlas-ui = "Atlas UI"
+mongosh = ":binary:`~bin.mongosh`"
 package-branch = "testing" # testing for dev rc releases
 windows-dir-version = "6.0" # wizard
 package-name-org = "mongodb-org"
