DOCSP-33213 fsync/fsyncUnlock Changes (#4802)
* DOCSP-33213 Updates to fsync/fsyncUnlock for Self-Managed Backups of Sharded Clusters

* Adds 7.1 versionadded

* Reworks Larger Deployment notes

* Documents new feature on fsyncUnlock and mongosh helpers

* Fixes build issue

* Adds lock timeout

* Minor edits for cluster coverage

* Minor edits for cluster coverage

* Adds include for lock/unlock

* Adjusts fsync text

* Fixes tables

* Adds notice for lock/unlock

* Minor edit

* Major edits to db.fsyncLock to bring it in sync

* Minor edit

* fsyncUnlock method edits

* Minor edits

* Minor edits

* Adds release note

* Fixes build issue

* Fixes build issue

* Fixes build issue

* Fixes build issue

* Fixes build issue

* Fixes per Ali

Co-authored-by: Alison Huh <112565127+ajhuh-mdb@users.noreply.github.com>

* Fixes per Ali

* Fixes per Ali

Co-authored-by: Alison Huh <112565127+ajhuh-mdb@users.noreply.github.com>

* Fixes per Nandini

* Fixes per Nandini

* Fixes per Nandini

* Fixes per Nandini

* Fixes per Nandini

---------

Co-authored-by: Kenneth P. J. Dyer <kenneth.dyer@monodb.com>
Co-authored-by: Alison Huh <112565127+ajhuh-mdb@users.noreply.github.com>

--- a/source/includes/extracts-dbcommands.yaml
+++ b/source/includes/extracts-dbcommands.yaml
@@ -1,8 +1,6 @@
 ref: comment-content
 content: |
-  Optional. 
-
-  A user-provided comment to attach to this command. Once set, this 
+  Optional. A user-provided comment to attach to this command. Once set, this 
   comment appears alongside records of this command in the following 
   locations:
   
