(DOCSP-32344): [Revamp] /docs/manual/tutorial/backup-and-restore-tools/ (#4918)
* (DOCSP-32344): [Revamp] /docs/manual/tutorial/backup-and-restore-tools/

* More places to add Atlas

* fix formatting errors

* more typo fixes

* Apply suggestions from code review

Co-authored-by: Sarah Simpers <82042374+sarahsimpers@users.noreply.github.com>

* edits from review

* more little fixes

* second copy review

---------

Co-authored-by: Sarah Simpers <82042374+sarahsimpers@users.noreply.github.com>

--- a/source/includes/extracts-export-tools-performance-considerations-base.yaml
+++ b/source/includes/extracts-export-tools-performance-considerations-base.yaml
@@ -14,10 +14,10 @@ content: |
   - Label files so that you can identify the contents of the
     backup as well as the point in time that the backup reflects.
 
-  - Use an alternative backup strategy such as :doc:`Filesystem
-    Snapshots </tutorial/backup-with-filesystem-snapshots>` or
-    :mms-docs:`MongoDB Cloud Manager </tutorial/nav/backup-use>` if the
-    performance impact of {{out_tool}} and {{in_tool}} is unacceptable
+  - Use an alternative backup strategy such as 
+    :doc:`Filesystem Snapshots </tutorial/backup-with-filesystem-snapshots>` 
+    or :atlas:`Cloud Backups in MongoDB Atlas </backup/cloud-backup/overview>`
+    if the performance impact of {{out_tool}} and {{in_tool}} is unacceptable
     for your use case.
 
   {{mongoDumpBullet}}
@@ -28,10 +28,10 @@ content: |
   .. seealso::
 
      :doc:`/core/backups` and
-     :mms-docs:`MongoDB Cloud Manager Backup documentation
-     </tutorial/nav/backup-use/>` for more information on backing up
-     MongoDB instances. Additionally, consider the following reference
-     documentation for the MongoDB Database Tools:
+     :atlas:`MongoDB Atlas Cloud Backups </backup/cloud-backup/overview/>` 
+     for more information on backing up MongoDB instances. Additionally, 
+     consider the following reference documentation for the MongoDB Database 
+     Tools:
 
      - :binary:`~bin.mongoexport`
      - :binary:`~bin.mongoimport`
