--- a/source/includes/extracts-export-tools-performance-considerations.yaml
+++ b/source/includes/extracts-export-tools-performance-considerations.yaml
@@ -7,7 +7,7 @@ replacement:
   in_tool: ":binary:`mongorestore`"
   mongoDumpBullet: |
     - Use :option:`--oplog <mongodump --oplog>` to capture incoming write operations during
-      the {{out_tool}} operation to ensure that the backups reflect
+      the :binary:`mongodump` operation to ensure that the backups reflect
       a consistent data state.
 ---
 ref: tools-performance-considerations-export-import
