DOCS-16222 Removed unused parameter from sh.removeTagRange() (#4973)
* Removed unused parameter from sh.removeTagRange()

* Removed self references

* Some PR feedback

* External review feedback

--- a/source/includes/steps-sharding-tiered-hardware-for-varying-slas-update.yaml
+++ b/source/includes/steps-sharding-tiered-hardware-for-varying-slas-update.yaml
@@ -29,15 +29,13 @@ action:
       * the full namespace of the target collection.
       * the inclusive lower bound of the range. 
       * the exclusive upper bound of the range. 
-      * the zone.
       
     language: javascript
     code: |
       sh.removeTagRange( 
         "photoshare.data",
         { "creation_date" : ISODate("2016-01-01") },
-        { "creation_date" : MaxKey }, 
-        "recent"
+        { "creation_date" : MaxKey }
       )
   - pre: |
       Remove the old ``archive`` zone range using the 
@@ -46,15 +44,13 @@ action:
       * the full namespace of the target collection.
       * the inclusive lower bound of the range. 
       * the exclusive upper bound of the range. 
-      * the zone.
       
     language: javascript
     code: |
       sh.removeTagRange( 
         "photoshare.data",
         { "creation_date" : MinKey },
-        { "creation_date" : ISODate("2016-01-01") }, 
-        "archive"
+        { "creation_date" : ISODate("2016-01-01") }
       )
 post: |
   :bsontype:`MinKey` and :bsontype:`MaxKey` are reserved special values for
