DOCSP-33002 Mention %b and %B Specifiers in 7.0 RN (#5105)
* DOCSP-33002 Mention %b and %B Specifiers in 7.0 RN

* formatting

* IF feedback

* IF feedback

* spelling

--- a/source/includes/extracts-date-format-specifiers.yaml
+++ b/source/includes/extracts-date-format-specifiers.yaml
@@ -13,11 +13,15 @@ content: |
         - Possible Values
 
       * - ``%b``
-        - Abbreviated month (3 letters)
+        - Abbreviated month name (3 letters)
+          
+          .. versionadded:: 7.0
         - ``jan``-``dec``
 
       * - ``%B``
         - Full month name
+          
+          .. versionadded:: 7.0
         - ``january``-``december``
 
       * - ``%d``
