DOCSP-27629 warning about indexes with collation size (#5224)
* DOCSP-27629 warning about indexes with collation size

* DOCSP-27629 fixing format

* DOCSP-27629 small fix

* DOCSP-27629 changing note to warning

* DOCSP-27629 tech edits

--- a/source/includes/extracts-collation.yaml
+++ b/source/includes/extracts-collation.yaml
@@ -110,6 +110,12 @@ content: |-
    cannot support an operation that performs string comparisons on the
    indexed fields if the operation specifies a different collation.
 
+   .. warning::
+
+      Because indexes that are configured with collation use ICU
+      collation keys to achieve sort order, collation-aware index keys
+      may be larger than index keys for indexes without collation. 
+
    For example, the collection ``myColl`` has an index on a string
    field ``category`` with the collation locale ``"fr"``.
 
