--- a/snooty.toml
+++ b/snooty.toml
@@ -160,6 +160,7 @@ toc_landing_pages = [
    "/reference/mongodb-wire-protocol/",
    "/reference/operator/aggregation-pipeline",
    "/reference/operator/aggregation",
+   "/reference/operator/aggregation/queryStats",
    "/reference/operator/query-array",
    "/reference/operator/query-bitwise",
    "/reference/operator/query-comparison",
